[FIX] timeline circles are in the wrong size

--- a/css/timeline.css
+++ b/css/timeline.css
@@ -40,11 +40,11 @@ p {
 .circle {
   margin-top: -10px;
   top: 50%;
-  left: -44px;
-  width: 10px;
-  height: 10px;
+  left: -54px;
+  width: 20px;
+  height: 20px;
   background: #48b379;
-  border: 5px solid #eee9dc;
+  border: 8px solid #7cdd99;
   border-radius: 50%;
   display: block;
   position: absolute;
@@ -53,7 +53,7 @@ p {
 .content {
   max-height: 20px;
   font-size: 20px;
-  padding: 50px 20px 0;
+  padding: 50px 30px 0;
   border-color: transparent;
   border-width: 2px;
   border-style: solid;
@@ -98,6 +98,7 @@ p {
   cursor: pointer;
   margin-left: 10px;
   /* top: 10px; */
+  padding-right: 10px;
   transition: transform 0.2s linear;
 }
 
@@ -122,7 +123,7 @@ p {
 .radio:checked ~ .content p {
   max-height: 200px;
   font-weight: 900;
-  color: #255c3e;
+  color: #3d8d61;
   transition: color 0.3s linear 0.3s;
   align-content: flex-start;
   max-height: fit-content;
@@ -155,7 +156,7 @@ p {
   .content {
     padding-top: 45px;
     border-color: #48b379;
-    
+
   }
   .content:before, .content:after {
     content: "";
@@ -178,24 +179,6 @@ p {
     top: 50%;
     margin-top: -17px;
   }
-  /* .content:before, .content:after {
-    border: solid transparent;
-    bottom: 100%;
-  }
-  .content:before {
-    border-bottom-color: inherit;
-    border-width: 17px;
-    top: -16px;
-    left: 50px;
-    margin-left: -17px;
-  }
-  .content:after {
-    border-bottom-color: #48b379;
-    border-width: 20px;
-    top: -20px;
-    left: 50px;
-    margin-left: -20px;
-  } */
   .content p {
     font-size: 0.9em;
     line-height: 1.4;
